filled out package info

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "gits-io-jetpack",
+    "name": "gist-io-jetpack",
     "license": "MPL 2.0",
-    "author": "",
-    "version": "0.1",
-    "fullName": "gits-io-jetpack",
-    "id": "jid1-5cyGnPgsVQg5vg",
-    "description": "a basic add-on"
+    "author": "Jeff Griffiths ( jeff@canuckistani.ca )",
+    "version": "0.2",
+    "fullName": "gist-io-jetpack",
+    "id": "gist-io-jetpack@canuckistani.ca",
+    "description": "A quick add-on that adds Fx integration with Gist.IO"
 }
